--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
+    android:foreground="?android:attr/selectableItemBackground"
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,6 +17,7 @@
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
             android:foreground="@drawable/bg_gradient"
+            android:contentDescription="@string/thumbnail_desc"
             tools:src="@drawable/ic_launcher_background"/>
 
         <LinearLayout
